; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_wifi/src/extr_smartconfig.c_esp_smartconfig_start.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_wifi/src/extr_smartconfig.c_esp_smartconfig_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i64 0, align 8
@SC_EVENT = common dso_local global i32 0, align 4
@SC_EVENT_GOT_SSID_PSWD = common dso_local global i32 0, align 4
@handler_got_ssid_passwd = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Register smartconfig default event handler fail!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @esp_smartconfig_start(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i64, i64* @ESP_OK, align 8
  store i64 %5, i64* %4, align 8
  %6 = load i32, i32* @SC_EVENT, align 4
  %7 = load i32, i32* @SC_EVENT_GOT_SSID_PSWD, align 4
  %8 = load i32, i32* @handler_got_ssid_passwd, align 4
  %9 = call i64 @esp_event_handler_register(i32 %6, i32 %7, i32 %8, i32* null)
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @ESP_OK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @TAG, align 4
  %15 = call i32 @ESP_LOGE(i32 %14, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %16 = load i64, i64* %4, align 8
  store i64 %16, i64* %2, align 8
  br label %30

17:                                               ; preds = %1
  %18 = load i32*, i32** %3, align 8
  %19 = call i64 @esp_smartconfig_internal_start(i32* %18)
  store i64 %19, i64* %4, align 8
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* @ESP_OK, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %17
  %24 = load i32, i32* @SC_EVENT, align 4
  %25 = load i32, i32* @SC_EVENT_GOT_SSID_PSWD, align 4
  %26 = load i32, i32* @handler_got_ssid_passwd, align 4
  %27 = call i32 @esp_event_handler_unregister(i32 %24, i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %23, %17
  %29 = load i64, i64* %4, align 8
  store i64 %29, i64* %2, align 8
  br label %30

30:                                               ; preds = %28, %13
  %31 = load i64, i64* %2, align 8
  ret i64 %31
}

declare dso_local i64 @esp_event_handler_register(i32, i32, i32, i32*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*) #1

declare dso_local i64 @esp_smartconfig_internal_start(i32*) #1

declare dso_local i32 @esp_event_handler_unregister(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
